--- a/requirements.txt
+++ b/requirements.txt
@@ -7,30 +7,33 @@ anthropic==0.69.0
 anyio==4.11.0
 argcomplete==3.6.2
 attrs==25.4.0
-boto3==1.40.51
-botocore==1.40.51
+Authlib==1.6.5
+boto3==1.40.52
+botocore==1.40.52
 cachetools==6.2.1
-certifi==2025.10.5
-charset-normalizer==3.4.4
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
 click==8.3.0
 cohere==5.18.0
 colorama==0.4.6
+cryptography==46.0.2
 distro==1.9.0
 dnspython==2.8.0
-docstring-parser==0.17.0
+docstring_parser==0.17.0
 email-validator==2.3.0
-eval-type-backport==0.2.2
+eval_type_backport==0.2.2
 executing==2.2.1
-fastapi==0.119.0
+fastapi==0.118.0
 fastapi-cli==0.0.13
 fastapi-cloud-cli==0.3.1
 fastavro==1.12.1
 filelock==3.20.0
 frozenlist==1.8.0
 fsspec==2025.9.0
-genai-prices==0.0.31
+genai-prices==0.0.32
 google-auth==2.41.1
-google-genai==1.43.0
+google-genai==1.44.0
 googleapis-common-protos==1.70.0
 griffe==1.14.0
 groq==0.32.0
@@ -40,23 +43,26 @@ httptools==0.7.1
 httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.35.3
-idna==3.11
-importlib-metadata==8.7.0
+idna==3.10
+importlib_metadata==8.7.0
 invoke==2.2.1
-jinja2==3.1.6
+itsdangerous==2.2.0
+Jinja2==3.1.6
 jiter==0.11.0
 jmespath==1.0.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 logfire==4.13.2
 logfire-api==4.13.2
+mangum==0.19.0
 markdown-it-py==4.0.0
-markupsafe==3.0.3
+MarkupSafe==3.0.3
 mcp==1.17.0
 mdurl==0.1.2
 mistralai==1.9.11
 multidict==6.7.0
 nexus-rpc==1.1.0
+numpy==2.3.3
 openai==2.3.0
 opentelemetry-api==1.37.0
 opentelemetry-exporter-otlp-proto-common==1.37.0
@@ -68,24 +74,28 @@ opentelemetry-sdk==1.37.0
 opentelemetry-semantic-conventions==0.58b0
 opentelemetry-util-http==0.58b0
 packaging==25.0
-prompt-toolkit==3.0.52
+pandas==2.3.3
+prompt_toolkit==3.0.52
 propcache==0.4.1
 protobuf==6.32.1
 pyasn1==0.6.1
-pyasn1-modules==0.4.2
-pydantic==2.12.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydantic==2.11.9
 pydantic-ai==1.0.18
 pydantic-ai-slim==1.0.18
-pydantic-core==2.41.3
 pydantic-evals==1.0.18
 pydantic-graph==1.0.18
 pydantic-settings==2.11.0
-pygments==2.19.2
+pydantic_core==2.33.2
+Pygments==2.19.2
 pyperclip==1.11.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
-python-multipart>=0.0.20
-pyyaml==6.0.3
+python-multipart==0.0.20
+pytz==2025.2
+pywin32==311
+PyYAML==6.0.3
 referencing==0.37.0
 requests==2.32.5
 rich==14.2.0
@@ -107,8 +117,9 @@ tqdm==4.67.1
 typer==0.19.2
 types-protobuf==6.32.1.20250918
 types-requests==2.32.4.20250913
-typing-extensions==4.15.0
-typing-inspection==0.4.2
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.37.0
 watchfiles==1.1.0
